--- a/src/app/recipes/recipe-detail/recipe-detail.page.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.page.html
@@ -1,9 +1,36 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>recipeDetail</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>{{recipe?.title}}</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="recipes"></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-grid class="ion-no-padding">
+    <ion-row>
+      <ion-col class="ion-no-padding">
+        <ion-img [src]="recipe?.imageUrl"></ion-img>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-label class="ion-text-center"
+            ><h1>{{recipe?.title}}</h1></ion-label
+          >
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-list>
+          <ion-item *ngFor="let ingredient of recipe?.ingredients"
+            >{{ingredient}}</ion-item
+          >
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
