--- a/src/app/recipes/recipes.page.html
+++ b/src/app/recipes/recipes.page.html
@@ -5,16 +5,14 @@
 </ion-header>
 
 <ion-content>
-  <ng-container *ngIf="recipes && recipes.length"
-    ><ion-list>
-      <ion-item *ngFor="let recipe of recipes" [routerLink]="['./', recipe.id]">
-        <ion-avatar slot="start">
-          <ion-img [src]="recipe.imageUrl"></ion-img>
-        </ion-avatar>
-        <ion-label>
-          {{recipe.title}}
-        </ion-label>
-      </ion-item>
-    </ion-list></ng-container
-  >
+  <ion-list>
+    <ion-item *ngFor="let recipe of recipes" [routerLink]="['./', recipe.id]">
+      <ion-avatar slot="start">
+        <ion-img [src]="recipe.imageUrl"></ion-img>
+      </ion-avatar>
+      <ion-label>
+        {{recipe.title}}
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
